--- a/reposicion/postgress/package.json
+++ b/reposicion/postgress/package.json
@@ -1,5 +1,5 @@
 {
-   "name": "reposicion-server",
+   "name": "postgress",
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
@@ -8,10 +8,8 @@
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "argon2": "^0.27.2",
-      "pg": "^8.4.0",
-      "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.32"
+      "typeorm": "0.2.32",
+      "reflect-metadata": "^0.1.10"
    },
    "scripts": {
       "start": "ts-node src/index.ts"
