--- a/reposicion/package.json
+++ b/reposicion/package.json
@@ -28,7 +28,7 @@
         "web-vitals": "^1.0.1"
     },
     "scripts": {
-        "start": "react-app-rewired start",
+        "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test"
     },
